--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,7 +21,7 @@
             android:id="@+id/background_welcome"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/back_login"
+            android:background="@drawable/background_login"
             android:contentDescription="@string/descr_loginscreen"
             android:scaleType="fitCenter" />
 
