--- a/app/src/main/res/layout/fragment_cinema_create_video.xml
+++ b/app/src/main/res/layout/fragment_cinema_create_video.xml
@@ -153,7 +153,7 @@
             app:srcCompat="@drawable/cinema_popcorn" />
 
         <ProgressBar
-            android:id="@+id/progressBar_length_video"
+            android:id="@+id/progressBar_cinema"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:progressDrawable="@drawable/red_progress_bar"
             android:layout_width="0dp"
@@ -170,34 +170,25 @@
             android:layout_height="0dp"
             android:alpha="0.5"
             android:src="#0000FF"
+            tools:visibility="gone"
             android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/bg_vogel"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@drawable/round_button"
-            android:backgroundTint="@color/color_white"
-            android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/layer_rendering"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/vogel"
+            android:id="@+id/spinner_loading"
             android:layout_width="wrap_content"
+            tools:visibility="gone"
             android:layout_height="wrap_content"
             android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/layer_rendering"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_vogeltje" />
+            app:srcCompat="@drawable/loading_spinner" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
