--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -89,6 +89,49 @@
             android:layout_height="12dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.40" />
+
+        <ImageView
+            android:id="@+id/drag_avatar"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/jongen_gamer_bl" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_cellar_top"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.80" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_roof_end"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.250" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/guide_roof_end"
+            app:layout_constraintEnd_toStartOf="@+id/skyscraper_goal_description"
+            app:layout_constraintStart_toStartOf="@+id/skyscraper"
+            app:layout_constraintTop_toTopOf="@+id/skyscraper"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/skyscraper"
+            app:layout_constraintStart_toStartOf="@+id/skyscraper"
+            app:layout_constraintTop_toTopOf="@+id/guide_cellar_top"
+            app:srcCompat="@drawable/empty_shape" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
