Add drop positions lift

--- a/app/src/main/res/layout/skyscraper_avatar_drag_drop.xml
+++ b/app/src/main/res/layout/skyscraper_avatar_drag_drop.xml
@@ -10,119 +10,285 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/skyscraper_create_goal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/skyscraper_blue">
+        android:layout_height="match_parent">
 
-        <androidx.gridlayout.widget.GridLayout
-            android:id="@+id/stairs"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:columnCount="2"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/skyscraper_blue" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_1"
+            android:layout_width="50dp"
+            android:layout_height="65dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_1"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_2"
+            android:layout_width="50dp"
+            android:layout_height="65dp"
+            android:tag="@string/your_avatar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guide_stairs_top">
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_1"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
 
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_1"
-                android:layout_width="50dp"
-                android:layout_height="65dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_2"
-                android:layout_width="50dp"
-                android:layout_height="65dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="start"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_3"
-                android:layout_width="50dp"
-                android:layout_height="65dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_4"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_5"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_6"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_7"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_3"
+            android:layout_width="50dp"
+            android:layout_height="65dp"
+            android:tag="@string/your_avatar"
+            app:layout_columnSpan="2"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_2"
+            app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:layout_gravity="end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
 
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_8"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_9"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_10"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_11"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                app:layout_gravity="end"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-            <ImageView
-                android:id="@+id/avatar_pos_stairs_12"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                app:layout_columnSpan="2"
-                android:tag="@string/your_avatar"
-                app:srcCompat="@drawable/empty_shape" />
-        </androidx.gridlayout.widget.GridLayout>
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_4"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_columnSpan="2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_2"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_5"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_columnSpan="2"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_3"
+            app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:layout_gravity="end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_6"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_columnSpan="2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_3"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_7"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_columnSpan="2"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_4"
+
+            app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:layout_gravity="end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_8"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_4"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_9"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_5"
+            app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_10"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_5"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_11"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_6"
+            app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar"/>
+
+        <ImageView
+            android:id="@+id/avatar_pos_stairs_12"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:tag="@string/your_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_6"
+            app:srcCompat="@drawable/empty_shape"
+            android:contentDescription="@string/your_avatar" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_1"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_1"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/empty_shape" />
+        <ImageView
+            android:id="@+id/avatar_pos_lift_2"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_1"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_3"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_2"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_4"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_2"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_5"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_3"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_6"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_3"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_7"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_4"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_8"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_4"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_9"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_5"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_10"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_5"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_11"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_6"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+            app:srcCompat="@drawable/empty_shape" />
+
+        <ImageView
+            android:id="@+id/avatar_pos_lift_12"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
+            android:tag="@string/your_avatar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guide_lift_end"
+            app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
+
+            app:layout_constraintTop_toTopOf="@+id/guide_pos_6"
+            app:srcCompat="@drawable/empty_shape" />
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_stairs_end"
             android:layout_width="8dp"
             android:layout_height="12dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.14" />
+            app:layout_constraintGuide_percent="0.18" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_stairs_top"
             android:layout_width="8dp"
@@ -157,6 +323,49 @@
             android:layout_height="12dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.90" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_1"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_2"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.28" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_3"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.40" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_4"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.52" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_5"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.64" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_pos_6"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.78" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
