--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -13,6 +13,8 @@
         android:id="@+id/cinema_start_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@drawable/achtergrond_cinema">
 
         <com.google.android.material.textfield.TextInputLayout
