--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -23,6 +23,16 @@
             android:contentDescription="@string/cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <ImageButton
+            android:id="@+id/btn_save_goal"
+            android:layout_width="@dimen/material_icon_width"
+            android:layout_height="@dimen/material_icon_height"
+            android:layout_marginTop="@dimen/margin_corner_button"
+            android:layout_marginEnd="@dimen/margin_corner_button"
+            android:background="@drawable/save_btn"
+            android:contentDescription="@string/ok"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <include
             android:id="@+id/skyscraper_avatar_drag_drop"
@@ -34,15 +44,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_skyscraper_return" />
 
-
-
-        <TextView
+        <EditText
             android:id="@+id/skyscraper_goal_description"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:autofillHints="Beschrijving doel"
             android:background="@drawable/skyscraper_panel_blue"
             android:gravity="center"
-            android:text="Beschrijving doel"
+            android:hint="Beschrijving doel"
             app:layout_constraintBottom_toTopOf="@+id/guide_panel_bottom"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper_avatar_drag_drop"
