--- a/app/src/main/res/layout/subgoal_rv_item.xml
+++ b/app/src/main/res/layout/subgoal_rv_item.xml
@@ -8,8 +8,10 @@
         android:id="@+id/subgoal_description"
         android:gravity="center_vertical"
         android:textSize="20sp"
-        android:textColor="#000"
-        android:padding="10dp"
+        android:textColor="#0000FF"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
