--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/search_btn"
-            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteModeEnabled == true ? 0.5F : 1F}"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
             android:id="@+id/btn_backpack_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteModeEnabled == true ? 0.5F : 1F}"
             android:background="@drawable/add_btn"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -142,7 +142,7 @@
             android:layout_height="@dimen/material_icon_height"
             android:layout_marginStart="@dimen/margin_corner_button"
             android:layout_marginTop="@dimen/margin_corner_button"
-            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteModeEnabled == true ? 0.5F : 1F}"
             android:background="@drawable/ic_return"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:contentDescription="@string/cancel"
