--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -258,5 +258,13 @@
         <item name="android:backgroundTint">#E7FFF8</item>
     </style>
 
+    <style name="caption_textinput">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/caption</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
 
 </resources>
