connect everything together

--- a/app/src/main/res/layout/dialog_save_treasurechest.xml
+++ b/app/src/main/res/layout/dialog_save_treasurechest.xml
@@ -105,7 +105,7 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="32dp"
-                        android:text="Titel"
+                        android:text="@string/save_event_title"
                         app:layout_constraintBottom_toTopOf="@id/textInputLayout_treasurechesttitle"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -147,7 +147,7 @@
                         style="@style/caption_textinput"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:text="Notities"
+                        android:text="@string/lbl_save_event_notes"
                         app:layout_constraintBottom_toTopOf="@id/textInputLayout_notes"
                         app:layout_constraintStart_toStartOf="@+id/lbl_treasurechest_title"
                         app:layout_constraintTop_toBottomOf="@id/textInputLayout_treasurechesttitle" />
@@ -184,6 +184,7 @@
                 android:id="@+id/btn_treasurechest_save"
                 android:layout_width="58dp"
                 android:layout_height="40dp"
+                android:onClick="@{() -> detailsMetaDataViewModel.onSaveDetailsData()}"
                 android:layout_margin="16dp"
                 android:backgroundTint="@android:color/transparent"
                 android:visibility="visible"
