--- a/app/src/main/res/layout/activity_backpackscreen.xml
+++ b/app/src/main/res/layout/activity_backpackscreen.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".faith.backpackScreen.BackpackScreenActivity">
+    android:layout_height="match_parent">
 
-
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/backpack_fragment_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
