--- a/app/src/main/res/layout/activity_treasurechest.xml
+++ b/app/src/main/res/layout/activity_treasurechest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="be.hogent.faith.faith.treasureChest.TreasureChestActivity">
+    android:layout_height="match_parent">
 
-
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/treasurechest_fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:defaultNavHost="true" />
 </LinearLayout>
