--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
 
         <variable
@@ -183,6 +183,7 @@
             android:layout_height="0dp"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/bottom_margin_horizontal"
+            android:onClick="@{() -> cityScreenViewModel.onTreehouseClicked()}"
             app:layout_constraintEnd_toStartOf="@+id/right_margin_vertical"
             app:layout_constraintStart_toStartOf="@+id/div_end_vertical"
             app:layout_constraintTop_toTopOf="@+id/div_botom_horizontal"
