--- a/app/src/main/res/menu/menu_cinema.xml
+++ b/app/src/main/res/menu/menu_cinema.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/backpack_menu_addFile"
+        android:id="@+id/cinema_menu_addFile"
         android:icon="@drawable/ic_menu_bestand"
         android:title="@string/bestand_toevoegen" />
     <item
-        android:id="@+id/backpack_menu_addFoto"
+        android:id="@+id/cinema_menu_addFoto"
         android:icon="@drawable/ic_menu_icoon_foto"
         android:title="@string/foto_nemen" />
     <item
-        android:id="@+id/backpack_menu_addDrawing"
+        android:id="@+id/cinema_menu_addDrawing"
         android:icon="@drawable/ic_tekenen"
         android:title="@string/description_addDrawing" />
 </menu>
