--- a/app/src/main/res/layout/dialog_save_treasurechest.xml
+++ b/app/src/main/res/layout/dialog_save_treasurechest.xml
@@ -180,17 +180,22 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_treasurechest_save"
-                android:layout_width="58dp"
-                android:layout_height="40dp"
+                style="@style/faith_button"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/save_btn"
+                android:contentDescription="@string/save"
                 android:onClick="@{() -> detailsMetaDataViewModel.onSaveDetailsData()}"
-                android:layout_margin="16dp"
-                android:backgroundTint="@android:color/transparent"
-                android:visibility="visible"
+                app:cornerRadius="40dp"
+                app:icon="@drawable/save_btn"
+                app:iconGravity="textStart"
+                app:iconPadding="5dp"
+                app:iconSize="44dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/save_btn" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
